fix: close gap

--- a/css/single.css
+++ b/css/single.css
@@ -143,7 +143,7 @@
     line-height: 150.2%;
 }
 .floorPlan img {
-    width: 70%;
+    width: 100%;
 }
 .singleMainContent {
     padding-top: 5%;
